# hackcmu

./: Cargo.toml  READEME.md  README.md  Trunk.toml  flake.nix  hackcmu.d.ts  hackcmu.js  hackcmu_bg.wasm.d.ts  index.html  trunk.html
.cargo/: config.toml
.github/workflows/: rust.yaml
res/: FinalMessage.md  Level1.md  Level1Init.wat  Level2.md  Level2Init.wat  Level3.md  Level3Init.wat  Level4.md  Level4Init.wat  Level5.md  Level5Init.wat  Level6.md  Level6Init.wat  Level7.md  Level7Init.wat  SolCode1.wat  SolCode2.wat  SolCode3.wat  SolCode4.wat  SolCode5.wat  SolCode6.wat  SolCode7.wat  WasmGameLevels.txt  test.wat
src/: game.rs  level.rs  main.rs  render3d.rs  ui.rs  wasm.rs
src/ui/: code_editor.rs  reference.rs  settings.rs  win_screen.rs
