[package]
name = "hackcmu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_egui = "0.36.0"
crossbeam-channel = "0.5.15"
egui_commonmark = "0.21.1"
egui_extras = {version = "0.32.3", features = ["syntect"]}
syntect = { version = "5.2.0", features = [ "default-fancy" ], default-features = false }
# wasmtime = {version = "36.0.2", features = [
wasmtime = { git = 'https://github.com/Eoghanmc22/wasmtime.git', features = [
  # "async",
  "runtime",
  "gc",
  "component-model",
  "pulley",
  "wat",
  "winch",

  # Default features that do work on wasm
  # "async",
  # "gc",
  # "gc-drc",
  # "gc-null",
  # "wat",
  # "debug-builtins",
  # "runtime",
  # "component-model",

  # Default features that dont work on wasm
  # "addr2line",
  # "cache",
  # "profiling",
  # "parallel-compilation",
  # "cranelift",
  # "pooling-allocator",
  # "demangle",
  # "coredump",
  # "threads",
  # "stack-switching",
  # "std",
], default-features = false }

[target.'cfg(unix)'.dependencies]
wasmtime = { git = 'https://github.com/Eoghanmc22/wasmtime.git' }

[profile.web]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 's'
debug = false
